--- a/example.html
+++ b/example.html
@@ -45,6 +45,7 @@
       </div>
     </section>
 
+    <section class="section-how">
     <div class="container grid grid--2-cols grid--center-v">
       <!--STEP 01-->
       <div class="step-text-box">
