--- a/example.html
+++ b/example.html
@@ -46,83 +46,145 @@
     </section>
 
     <section class="section-how">
-    <div class="container grid grid--2-cols grid--center-v">
-      <!--STEP 01-->
-      <div class="step-text-box">
-        <p class="step-number">01</p>
-        <h3 class="heading-tertiary">
-          Lorem ipsum dolor sit amet
-        </h3>
-        <p class="step-description">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda aspernatur esse, ipsa quae qui dolore sapiente ab error, earum nisi sed deleniti obcaecati iure hic, nemo placeat alias! Impedit, reiciendis!
-          Delectus possimus necessitatibus ipsum nesciunt repellat! 
-        </p>
-      </div>
-      <div class="step-img-box">
-        <img
-          src="Images/personal-life.png"
-          class="step-img"
-          alt="iPhone app
+      <div class="container grid grid--2-cols grid--center-v">
+        <!--STEP 01-->
+        <div class="step-text-box">
+          <p class="step-number">01</p>
+          <h3 class="heading-tertiary">Lorem ipsum dolor sit amet</h3>
+          <p class="step-description">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda
+            aspernatur esse, ipsa quae qui dolore sapiente ab error, earum nisi
+            sed deleniti obcaecati iure hic, nemo placeat alias! Impedit,
+            reiciendis! Delectus possimus necessitatibus ipsum nesciunt
+            repellat!
+          </p>
+        </div>
+        <div class="step-img-box">
+          <img
+            src="Images/personal-life.png"
+            class="step-img"
+            alt="iPhone app
       preferences selection screen"
-        />
-      </div>
+          />
+        </div>
 
-      <!--STEP 02-->
-      <div class="step-img-box">
-        <img
-          src="Images/hobbie.png"
-          class="step-img"
-          alt="iPhone app
+        <!--STEP 02-->
+        <div class="step-img-box">
+          <img
+            src="Images/hobbie.png"
+            class="step-img"
+            alt="iPhone app
         meal approving plan screen"
-        />
-      </div>
-      <div class="step-text-box">
-        <p class="step-number">02</p>
-        <h3 class="heading-tertiary">Lorem ipsum dolor sit amet</h3>
-        <p class="step-description">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda aspernatur esse, ipsa quae qui dolore sapiente ab error, earum nisi sed deleniti obcaecati iure hic, nemo placeat alias! Impedit, reiciendis!
-          Delectus possimus necessitatibus ipsum nesciunt repellat! 
-        </p>
-      </div>
+          />
+        </div>
+        <div class="step-text-box">
+          <p class="step-number">02</p>
+          <h3 class="heading-tertiary">Lorem ipsum dolor sit amet</h3>
+          <p class="step-description">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda
+            aspernatur esse, ipsa quae qui dolore sapiente ab error, earum nisi
+            sed deleniti obcaecati iure hic, nemo placeat alias! Impedit,
+            reiciendis! Delectus possimus necessitatibus ipsum nesciunt
+            repellat!
+          </p>
+        </div>
 
-      <!-- STEP 03 -->
-      <div class="step-text-box">
-        <p class="step-number">03</p>
-        <h3 class="heading-tertiary">Lorem ipsum dolor sit amet</h3>
-        <p class="step-description">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda aspernatur esse, ipsa quae qui dolore sapiente ab error, earum nisi sed deleniti obcaecati iure hic, nemo placeat alias! Impedit, reiciendis!
-          Delectus possimus necessitatibus ipsum nesciunt repellat! 
-        </p>
-      </div>
-      <div class="step-img-box">
-        <img
-          src="Images/goals.png"
-          class="step-img"
-          alt="iPhone app
+        <!-- STEP 03 -->
+        <div class="step-text-box">
+          <p class="step-number">03</p>
+          <h3 class="heading-tertiary">Lorem ipsum dolor sit amet</h3>
+          <p class="step-description">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda
+            aspernatur esse, ipsa quae qui dolore sapiente ab error, earum nisi
+            sed deleniti obcaecati iure hic, nemo placeat alias! Impedit,
+            reiciendis! Delectus possimus necessitatibus ipsum nesciunt
+            repellat!
+          </p>
+        </div>
+        <div class="step-img-box">
+          <img
+            src="Images/goals.png"
+            class="step-img"
+            alt="iPhone app
         delivery screen"
-        />
+          />
+        </div>
       </div>
-    </div>
-  </section>
-    <nav class="nav-col">
-        <p class="footer-heading">Usman</p>
-        <ul class="footer-nav">
-          <li><a class="footer-link" href="#">dolor sit amet</a></li>
-          <li><a class="footer-link" href="#">dolor sit amet</a></li>
-          <li><a class="footer-link" href="#">dolor sit amet</a></li>
-          <li><a class="footer-link" href="#">dolor sit amet</a></li>
-        </ul>
-      </nav>
+    </section>
 
-      <nav class="nav-col">
-        <p class="footer-heading">dolor sit amet</p>
-        <ul class="footer-nav">
-          <li><a class="footer-link" href="#">dolor sit amet </a></li>
-          <li><a class="footer-link" href="#">dolor sit amet</a></li>
-          <li><a class="footer-link" href="#">dolor sit amet</a></li>
-        </ul>
-      </nav>
-    </div>
-  </footer>
+    <footer class="footer">
+      <div class="container grid grid--footer">
+        <div class="logo-col">
+          <a href="#" class="footer-logo">
+            <img class="logo" alt="Omnifood logo" src="img/omnifood-logo.png" />
+          </a>
+
+          <ul class="social-links">
+            <li>
+              <a class="footer-link" href="#"
+                ><ion-icon class="social-icon" name="logo-instagram"></ion-icon
+              ></a>
+            </li>
+            <li>
+              <a class="footer-link" href="#"
+                ><ion-icon class="social-icon" name="logo-facebook"></ion-icon
+              ></a>
+            </li>
+            <li>
+              <a class="footer-link" href="#"
+                ><ion-icon class="social-icon" name="logo-twitter"></ion-icon
+              ></a>
+            </li>
+          </ul>
+
+          <p class="copyright">
+            Copyright &copy; 2027 by Omnifood, Inc. All rights reserved.
+          </p>
+        </div>
+        <div class="address-col">
+          <p class="footer-heading">Contact us</p>
+          <address class="contacts">
+            <p class="address">
+              623 Harrison St., 2nd Floor, San Francisco, CA 94107
+            </p>
+            <p>
+              <a class="footer-link" href="tel:415-201-6370">415-201-6370</a
+              ><br />
+              <a class="footer-link" href="mailto:hello@omnifood.com"
+                >hello@omnifood.com</a
+              >
+            </p>
+          </address>
+        </div>
+        <nav class="nav-col">
+          <p class="footer-heading">Account</p>
+          <ul class="footer-nav">
+            <li><a class="footer-link" href="#">Create account</a></li>
+            <li><a class="footer-link" href="#">Sign in</a></li>
+            <li><a class="footer-link" href="#">iOS app</a></li>
+            <li><a class="footer-link" href="#">Android app</a></li>
+          </ul>
+        </nav>
+
+        <nav class="nav-col">
+          <p class="footer-heading">Company</p>
+          <ul class="footer-nav">
+            <li><a class="footer-link" href="#">About Omnifood</a></li>
+            <li><a class="footer-link" href="#">For Business</a></li>
+            <li><a class="footer-link" href="#">Cooking partners</a></li>
+            <li><a class="footer-link" href="#">Careers</a></li>
+          </ul>
+        </nav>
+
+        <nav class="nav-col">
+          <p class="footer-heading">Resources</p>
+          <ul class="footer-nav">
+            <li><a class="footer-link" href="#">Recipe directory </a></li>
+            <li><a class="footer-link" href="#">Help center</a></li>
+            <li><a class="footer-link" href="#">Privacy & terms</a></li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
   </main>
 </body>
